# TelegramGPTBot

./: .pre-commit-config.yaml  LICENSE  README.md  docker-compose.prod.yml
.github/workflows/: docker-image.yml  python-app.yml
TelegramGPT/: Dockerfile  pyproject.toml
TelegramGPT/telegramgpt/: .env.example  bot.py  config.py  gpt.py  main.py
TelegramGPT/tests/: test_bot.py
